syntax = "proto3";

package proto.services.tasks_svc.v1;

option go_package = "gen/proto/services/tasks-svc";

//
// CreatePatient
//

message CreatePatientRequest {
  string human_readable_identifier = 1; // @gotags: validate: "required"
  optional string notes = 2;
}

message CreatePatientResponse {
  string id = 1;
}

//
// GetPatient
//

message GetPatientRequest {
  string id = 1; // @gotags: validate: "uuid4"
}

message GetPatientResponse {
  string id = 1; // @gotags: validate:"uuid4"
  string human_readable_identifier = 2; // @gotags: validate:"required"
  string notes = 3;
  optional string bed_id = 4 [deprecated=true];
  optional string ward_id = 5 [deprecated=true];

  optional Room room = 7;
  optional Bed bed = 8;

  message Room {
    string id = 1;
    string name = 2;
    string ward_id = 3;
  }

  message Bed {
    string id = 1;
    string name = 2;
  }
}

//
// GetRecentPatients
//

message GetRecentPatientsRequest {}

message GetRecentPatientsResponse {
  repeated PatientWithRoomAndBed recent_patients = 1;

  message Bed {
    string id = 1;
    string name = 2;
  }

  message  Room {
    string  id = 1;
    string  name = 2;
    string  ward_id = 3;
  }

  message PatientWithRoomAndBed {
    string id = 1;
    string human_readable_identifier = 2;
    Room room = 3;
    Bed bed = 4;
  }
}


//
// UpdatePatient
//

message UpdatePatientRequest {
  string id = 1; // @gotags: validate:"uuid4"
  optional string human_readable_identifier = 2;
  optional string notes = 3;
  }

message UpdatePatientResponse {}

//
// AssignBed
//

message AssignBedRequest {
  string id = 1; // @gotags: validate:"uuid4"
  string bed_id = 2; // @gotags: validate:"uuid4"
}

message AssignBedResponse {}

//
// UnassignBed
//

message UnassignBedRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message UnassignBedResponse {}

//
// DischargePatient
//

message DischargePatientRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message DischargePatientResponse {}
//
// ReadmitPatient
//

message ReadmitPatientRequest {
  string patient_id = 1; // @gotags: validate:"uuid4"
}

message ReadmitPatientResponse {}

//
// PatientService
//

service PatientService {
  rpc CreatePatient(CreatePatientRequest) returns (CreatePatientResponse) {}
  rpc GetPatient(GetPatientRequest) returns (GetPatientResponse) {}
  rpc UpdatePatient(UpdatePatientRequest) returns (UpdatePatientResponse) {}
  rpc AssignBed(AssignBedRequest) returns (AssignBedResponse) {}
  rpc UnassignBed(UnassignBedRequest) returns (UnassignBedResponse) {}
  rpc DischargePatient(DischargePatientRequest) returns (DischargePatientResponse) {}
  rpc ReadmitPatient(ReadmitPatientRequest) returns (ReadmitPatientResponse) {}
}
